# srtforge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/srtforge/: __init__.py  audio.py  cli.py  merge.py  segment.py  srt.py  transcribe.py  transcript.py  translate.py
tests/: test_cli.py  test_merge.py  test_segment.py  test_srt.py  test_transcript.py
